// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> should match the snapshot 1`] = `
<DocumentFragment>
  .c4 {
  display: block;
  margin-bottom: 5px;
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c5 {
  color: #424242;
  margin: 0 0 0 12px;
}

.c2 {
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c2[disabled] {
  cursor: not-allowed;
}

.c2[disabled] ~ .c3 {
  color: #999999;
}

<div
    class="Checkbox__Wrapper-sc-1ca5whm-0"
  >
    <div
      class="c0"
    >
      <input
        class="c1 c2"
        id=""
        name="foo"
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root Checkbox__CheckIcon-sc-1ca5whm-3"
        data-qtm-preloader="icon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        class="c3 c4 c5"
        for=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Checkbox /> should match the snapshot 2`] = `
<DocumentFragment>
  .c6 {
  color: #ac001a;
  margin-top: 8px;
  cursor: text;
  display: block;
  line-height: normal;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
}

.c4 {
  display: block;
  margin-bottom: 5px;
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c5 {
  color: #424242;
  margin: 0 0 0 12px;
}

.c7[disabled] ~ .c3 {
  color: #999999;
}

.c2 {
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c2[disabled] {
  cursor: not-allowed;
}

.c2[disabled] ~ .c3 {
  color: #999999;
}

<div
    class="Checkbox__Wrapper-sc-1ca5whm-0"
  >
    <div
      class="c0"
    >
      <input
        class="c1 c2"
        id=""
        name="foo"
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root Checkbox__CheckIcon-sc-1ca5whm-3"
        data-qtm-preloader="icon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        class="c3 c4 c5"
        for=""
      />
    </div>
    <span
      class="c6"
    >
      error message
    </span>
  </div>
</DocumentFragment>
`;

exports[`<Checkbox /> should match the snapshot 3`] = `
<DocumentFragment>
  .c6 {
  color: #ac001a;
  margin-top: 8px;
  cursor: text;
  display: block;
  line-height: normal;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
}

.c4 {
  display: block;
  margin-bottom: 5px;
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c5 {
  color: #424242;
  margin: 0 0 0 12px;
}

.c7[disabled] ~ .c3 {
  color: #999999;
}

.c2 {
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c2[disabled] {
  cursor: not-allowed;
}

.c2[disabled] ~ .c3 {
  color: #999999;
}

<div
    class="Checkbox__Wrapper-sc-1ca5whm-0"
  >
    <div
      class="c0"
    >
      <input
        checked=""
        class="c1 c2"
        id=""
        name="foo"
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root Checkbox__CheckIcon-sc-1ca5whm-3"
        data-qtm-preloader="icon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        class="c3 c4 c5"
        for=""
      />
    </div>
    <span
      class="c6"
    >
      error message
    </span>
  </div>
</DocumentFragment>
`;

exports[`<Checkbox /> should match the snapshot 4`] = `
<DocumentFragment>
  .c4 {
  display: block;
  margin-bottom: 5px;
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c5 {
  color: #424242;
  margin: 0 0 0 12px;
}

.c2 {
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c2[disabled] {
  cursor: not-allowed;
}

.c2[disabled] ~ .c3 {
  color: #999999;
}

.c6[disabled] ~ .c3 {
  color: #999999;
}

<div
    class="Checkbox__Wrapper-sc-1ca5whm-0"
  >
    <div
      class="c0"
    >
      <input
        checked=""
        class="c1 c2"
        id=""
        name="foo"
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root Checkbox__CheckIcon-sc-1ca5whm-3"
        data-qtm-preloader="icon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        class="c3 c4 c5"
        for=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Checkbox /> should match the snapshot 5`] = `
<DocumentFragment>
  .c4 {
  display: block;
  margin-bottom: 5px;
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c5 {
  color: #424242;
  margin: 0 0 0 12px;
}

.c2 {
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c2[disabled] {
  cursor: not-allowed;
}

.c2[disabled] ~ .c3 {
  color: #999999;
}

.c6[disabled] ~ .c3 {
  color: #999999;
}

<div
    class="Checkbox__Wrapper-sc-1ca5whm-0"
  >
    <div
      class="c0"
    >
      <input
        class="c1 c2"
        disabled=""
        id=""
        name="foo"
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root Checkbox__CheckIcon-sc-1ca5whm-3"
        data-qtm-preloader="icon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        class="c3 c4 c5"
        for=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Checkbox /> should match the snapshot 6`] = `
<DocumentFragment>
  .c4 {
  display: block;
  margin-bottom: 5px;
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c5 {
  color: #424242;
  margin: 0 0 0 12px;
}

.c2 {
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c2[disabled] {
  cursor: not-allowed;
}

.c2[disabled] ~ .c3 {
  color: #999999;
}

.c6[disabled] ~ .c3 {
  color: #999999;
}

<div
    class="Checkbox__Wrapper-sc-1ca5whm-0"
  >
    <div
      class="c0"
    >
      <input
        class="c1 c2"
        id=""
        name="foo"
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root Checkbox__CheckIcon-sc-1ca5whm-3"
        data-qtm-preloader="icon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        class="c3 c4 c5"
        for=""
      >
        Some text
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Checkbox /> should match the snapshot 7`] = `
<DocumentFragment>
  .c4 {
  display: block;
  margin-bottom: 5px;
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c5 {
  color: #424242;
  margin: 0 0 0 12px;
}

.c2 {
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c2[disabled] {
  cursor: not-allowed;
}

.c2[disabled] ~ .c3 {
  color: #999999;
}

.c6[disabled] ~ .c3 {
  color: #999999;
}

<div
    class="Checkbox__Wrapper-sc-1ca5whm-0"
  >
    <div
      class="c0"
    >
      <input
        checked=""
        class="c1 c2"
        disabled=""
        id=""
        name="foo"
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root Checkbox__CheckIcon-sc-1ca5whm-3"
        data-qtm-preloader="icon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        class="c3 c4 c5"
        for=""
      />
    </div>
  </div>
</DocumentFragment>
`;
